<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Maritaca Mobile</string>
    
    <!-- Label -->
    <string name="label_user">E-mail:</string>
    <string name="label_password">Password:</string>
    
    <string name="label_previous">Previous</string>
    <string name="label_help">Help?</string>
    <string name="label_next">Next</string>
    
    <!-- -->
    <string name="label_confirmation">Confirmation</string>
    <string name="msg_confirmation">Do you want to save the data?</string>
           
    <!-- menu -->
    <string name="main_title">Maritaca Mobile</string>
    
    <string name="form_collect">Collect</string>
    <string name="form_sync">Send Data</string>
    <string name="form_settings">Settings</string>
    
    <string name="application_settings">Settings</string>
    
    <!-- Button -->
    <string name="button_login">Login</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="user">User:</string>
    <string name="expires_in">Expires in:</string>

</resources>