<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/mobile_background"
        android:orientation="vertical"
        android:layout_weight="1"
        android:padding="30dip" >

        <TextView
            android:id="@+id/main_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
			android:layout_gravity="center"
            android:layout_marginBottom="20dip"
            android:shadowColor="#FFFFFF"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="3"
            android:text="@string/main_title"
            android:textColor="#206020"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/form_collect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:text="@string/form_collect"
            android:layout_below="@id/main_title"/>

        <Button
            android:id="@+id/form_sync"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:text="@string/form_sync"
            android:layout_below="@id/form_collect"/>

        <Button
            android:id="@+id/application_settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:text="@string/application_settings"
            android:layout_below="@id/form_sync"/>        
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_weight="0"
        android:background="@drawable/footer_gradient"
        android:orientation="horizontal"
        android:padding="0dip" >
        
        <TextView
            android:text="@string/user"
            android:textStyle="bold"
            style="@style/footer_font"/>
        
        <TextView
            android:id="@+id/logged_user"
            android:typeface="monospace"
            style="@style/footer_font"/>

        <TextView
            android:text="@string/expires_in"
            android:textStyle="bold"
            style="@style/footer_font"/>
        
        <TextView
            android:id="@+id/expiration_time"
            android:layout_width="0dp"
            android:typeface="monospace"
            android:layout_weight="1"
            style="@style/footer_font"/>

        
        <Button
            android:layout_width="26dp"
            android:layout_height="26dp"            
            android:layout_gravity="center"
            android:gravity="right"
            android:background="@drawable/project_logo"/>        
        
        </LinearLayout>
</LinearLayout>
    
